Fix css bug on Firefox

--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
-    height: 550px;
-    width: 550px;
+    height: 550.2px;
+    width: 550.2px;
 }
 
 .single-block {
